kubernetes/apps/monitoring/kubernetes-dashboard/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubernetes-dashboard
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: ingress
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: adguard
            app.kubernetes.io/name: adguard-home
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
